--- a/openlane/openframe_project_wrapper/config.json
+++ b/openlane/openframe_project_wrapper/config.json
@@ -1,25 +1,27 @@
 {
     "DESIGN_NAME": "openframe_project_wrapper",
     "VERILOG_FILES": [
-        "dir::../../verilog/rtl/defines.v",
-        "dir::../../verilog/rtl/openframe_project_wrapper.v"
+        "dir::../../verilog/rtl/openframe_project_netlists.v"
     ],
+    "RUN_VERILATOR": 0,
+    "SYNTH_READ_BLACKBOX_LIB": 1,
     "ROUTING_CORES": 1,
     "CLOCK_PERIOD": 25,
-    "CLOCK_PORT": "gpio_in\[38\]",
-    "CLOCK_NET": "openframe.gpio_in\[38\]",
-    "FP_PDN_MACRO_HOOKS": "openframe vccd1 vssd1 vccd1 vssd1",
+    "CLOCK_PORT": "gpio_in[38]",
+    "CLOCK_NET": "openframe_example.gpio_in[38]",
+    "FP_PDN_MACRO_HOOKS": "openframe_example vccd1 vssd1 vccd1 vssd1",
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "MAGIC_DEF_LABELS": 0,
     "VERILOG_FILES_BLACKBOX": [
-        "dir::../../verilog/rtl/defines.v"
+	"/usr/share/pdk/sky130A/libs.ref/sky130_sram_macros/verilog/sky130_sram_2kbyte_1rw1r_32x512_8.v"
     ],
-    "EXTRA_LEFS": "",
-    "EXTRA_GDS_FILES": "",
+    "EXTRA_LEFS": "/usr/share/pdk/sky130A/libs.ref/sky130_sram_macros/lef/sky130_sram_2kbyte_1rw1r_32x512_8.lef",
+    "EXTRA_GDS_FILES": "/usr/share/pdk/sky130A/libs.ref/sky130_sram_macros/gds/sky130_sram_2kbyte_1rw1r_32x512_8.gds",
     "BASE_SDC_FILE": "dir::base_openframe_project_wrapper.sdc",
     "IO_SYNC": 0,
     "FP_PDN_CHECK_NODES": 0,
-    "SYNTH_ELABORATE_ONLY": 1,
+    "SYNTH_ELABORATE_ONLY": 0,
+    "SYNTH_USE_PG_PINS_DEFINES": "USE_POWER_PINS",
     "PL_RANDOM_GLB_PLACEMENT": 1,
     "PL_RESIZER_DESIGN_OPTIMIZATIONS": 0,
     "PL_RESIZER_TIMING_OPTIMIZATIONS": 0,
@@ -30,7 +32,6 @@
     "RUN_TAP_DECAP_INSERTION": 0,
     "FP_PDN_VPITCH": 180,
     "FP_PDN_HPITCH": 180,
-    "CLOCK_TREE_SYNTH": 0,
     "FP_PDN_VOFFSET": 5,
     "FP_PDN_HOFFSET": 5,
     "MAGIC_ZEROIZE_ORIGIN": 0,
@@ -66,7 +67,6 @@
         "vssa1",
         "vssa2"
     ],
-    "SYNTH_USE_PG_PINS_DEFINES": "USE_POWER_PINS",
     "pdk::sky130*": {
         "RT_MAX_LAYER": "met4",
         "DIE_AREA": "0 0 3168.82 4768.82",
