Add tests for housekeeping registers access using spi

--- a/verilog/dv/cocotb/openframe_test.yaml
+++ b/verilog/dv/cocotb/openframe_test.yaml
@@ -7,3 +7,7 @@ Tests:
     - {name: uart, sim: RTL}
     - {name: wr_rd_gpio_config, sim: RTL}
     - {name: timer, sim: RTL}
+    - {name: timer_chain, sim: RTL}
+    - {name: spi_master, sim: RTL}
+    - {name: hk_reset_val, sim: RTL}
+    - {name: hk_wr_regs, sim: RTL}
