--- a/openlane/picosoc/config.json
+++ b/openlane/picosoc/config.json
@@ -10,7 +10,6 @@
         "dir::../../verilog/rtl/clock_routing.v",
         "dir::../../verilog/rtl/intercon_wb.v",
         "dir::../../verilog/rtl/housekeeping.v",
-        "dir::../../verilog/rtl/digital_locked_loop.v",
         "dir::../../verilog/rtl/simple_spi_master.v",
         "dir::../../verilog/rtl/counter_timer_high.v",
         "dir::../../verilog/rtl/counter_timer_low.v",
@@ -27,11 +26,18 @@
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "MAGIC_DEF_LABELS": 0,
     "VERILOG_FILES_BLACKBOX": [
-        "pdk_dir::libs.ref/sky130_sram_macros/verilog/sky130_sram_2kbyte_1rw1r_32x512_8.v"
+        "pdk_dir::libs.ref/sky130_sram_macros/verilog/sky130_sram_2kbyte_1rw1r_32x512_8.v",
+        "dir::../../verilog/rtl/digital_locked_loop.v"
     ],
-    "EXTRA_LEFS": "pdk_dir::libs.ref/sky130_sram_macros/lef/sky130_sram_2kbyte_1rw1r_32x512_8.lef",
-    "EXTRA_GDS_FILES": "pdk_dir::libs.ref/sky130_sram_macros/gds/sky130_sram_2kbyte_1rw1r_32x512_8.gds",
-    "EXTRA_LIBS": "pdk_dir::libs.ref/sky130_sram_macros/lib/sky130_sram_2kbyte_1rw1r_32x512_8_TT_1p8V_25C.lib",
+    "EXTRA_LEFS": ["pdk_dir::libs.ref/sky130_sram_macros/lef/sky130_sram_2kbyte_1rw1r_32x512_8.lef",
+        "dir::../../lef/digital_locked_loop.lef"
+    ],
+    "EXTRA_GDS_FILES": ["pdk_dir::libs.ref/sky130_sram_macros/gds/sky130_sram_2kbyte_1rw1r_32x512_8.gds",
+        "dir::../../gds/digital_locked_loop.gds"
+    ],
+    "EXTRA_LIBS": ["pdk_dir::libs.ref/sky130_sram_macros/lib/sky130_sram_2kbyte_1rw1r_32x512_8_TT_1p8V_25C.lib",
+        "dir::../../lib/digital_locked_loop.lib"
+    ],
     "STA_MULTICORNER_READ_LIBS": 1,
     "FP_PDN_CHECK_NODES": 0,
     "SYNTH_USE_PG_PINS_DEFINES": "USE_POWER_PINS",
@@ -42,11 +48,11 @@
     "PL_RESIZER_BUFFER_INPUT_PORTS": 1,
     "PL_RESIZER_MAX_WIRE_LENGTH": 500,
     "FP_PDN_ENABLE_RAILS": 1,
-    "FP_PDN_VPITCH": 180,
+    "FP_PDN_VPITCH": 30,
     "GRT_REPAIR_ANTENNAS": 1,
     "RUN_HEURISTIC_DIODE_INSERTION": 1,
     "HEURISTIC_ANTENNA_THRESHOLD": 80,
-    "FP_PDN_HPITCH": 180,
+    "FP_PDN_HPITCH": 40,
     "FP_PDN_VOFFSET": 5,
     "FP_PDN_HOFFSET": 5,
     "MAGIC_ZEROIZE_ORIGIN": 0,
@@ -62,7 +68,7 @@
     "FP_PDN_VSPACING": 2,
     "FP_PDN_HSPACING": 2,
     "FP_PDN_CFG": "dir::pdn_cfg.tcl",
-    "FP_PDN_MACRO_HOOKS": "soc_mem\\.mem\\.SRAM_0 VPWR VGND vccd1 vssd1, soc_mem\\.mem\\.SRAM_1 VPWR VGND vccd1 vssd1",
+    "FP_PDN_MACRO_HOOKS": "soc_mem\\.mem\\.SRAM_0 VPWR VGND vccd1 vssd1, soc_mem\\.mem\\.SRAM_1 VPWR VGND vccd1 vssd1, dll VPWR VGND vccd1 vssd1",
     "RUN_CTS": 1,
     "CLOCK_PORT": "gpio_in[38]",
     "GPL_CELL_PADDING": 2,
@@ -77,5 +83,6 @@
     "RCX_SDC_FILE": "dir::signoff.sdc",
     "RUN_MAGIC_DRC": 0,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
-    "SYNTH_DEFINES": "PnR"
+    "SYNTH_DEFINES": "PnR",
+    "QUIT_ON_HOLD_VIOLATIONS": 0
 }
