--- a/openlane/picosoc/config.json
+++ b/openlane/picosoc/config.json
@@ -51,6 +51,7 @@
     "FP_PDN_VPITCH": 30,
     "GRT_REPAIR_ANTENNAS": 1,
     "RUN_HEURISTIC_DIODE_INSERTION": 1,
+    "GRT_ANT_MARGIN": 20,
     "HEURISTIC_ANTENNA_THRESHOLD": 80,
     "FP_PDN_HPITCH": 40,
     "FP_PDN_VOFFSET": 5,
