Add cpu reset test

--- a/verilog/dv/cocotb/openframe_test.yaml
+++ b/verilog/dv/cocotb/openframe_test.yaml
@@ -11,3 +11,4 @@ Tests:
     - {name: spi_master, sim: RTL}
     - {name: hk_reset_val, sim: RTL}
     - {name: hk_wr_regs, sim: RTL}
+    - {name: cpu_reset, sim: RTL}
