--- a/openlane/picosoc/config.json
+++ b/openlane/picosoc/config.json
@@ -85,5 +85,6 @@
     "RUN_MAGIC_DRC": 0,
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "SYNTH_DEFINES": "PnR",
-    "QUIT_ON_HOLD_VIOLATIONS": 0
+    "QUIT_ON_HOLD_VIOLATIONS": 0,
+    "GRT_ADJUSTMENT": 0.08
 }
