update openlane configuration files for `openframe_project_wrapper`

--- a/openlane/openframe_project_wrapper/config.json
+++ b/openlane/openframe_project_wrapper/config.json
@@ -4,7 +4,8 @@
         "dir::../../verilog/rtl/openframe_project_netlists.v",
         "dir::../../verilog/rtl/openframe_project_wrapper.v"
     ],
-    "RUN_VERILATOR": 0,
+    "SYNTH_DEFINES": "PnR",
+    "RUN_LINTER": 0,
     "SYNTH_READ_BLACKBOX_LIB": 1,
     "ROUTING_CORES": 10,
     "CLOCK_PERIOD": 25,
@@ -12,30 +13,23 @@
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "MAGIC_DEF_LABELS": 0,
     "VERILOG_FILES_BLACKBOX": [
-        "pdk_dir::libs.ref/sky130_sram_macros/verilog/sky130_sram_2kbyte_1rw1r_32x512_8.v",
+        "dir::../picosoc/sky130_sram_2kbyte_1rw1r_32x512_8.v",
         "dir::../../verilog/gl/picosoc.v",
         "dir::../../verilog/gl/digital_locked_loop.v"
     ],
-    "EXTRA_LEFS": ["pdk_dir::libs.ref/sky130_sram_macros/lef/sky130_sram_2kbyte_1rw1r_32x512_8.lef",
-            "dir::../../lef/picosoc.lef"
-    ],
-    "EXTRA_GDS_FILES": ["pdk_dir::libs.ref/sky130_sram_macros/gds/sky130_sram_2kbyte_1rw1r_32x512_8.gds",
-            "dir::../../gds/picosoc.gds"
-    ],
-    "EXTRA_LIBS": ["pdk_dir::libs.ref/sky130_sram_macros/lib/sky130_sram_2kbyte_1rw1r_32x512_8_TT_1p8V_25C.lib",
-            "dir::../../lib/picosoc.lib"
-    ],
+    "EXTRA_LEFS": ["dir::../../lef/picosoc.lef"],
+    "EXTRA_GDS_FILES": ["dir::../../gds/picosoc.gds"],
+    "EXTRA_LIBS": ["dir::../../lib/picosoc.lib"],
     "EXTRA_SPEFS": [
         "picosoc",
-        "dir::../../signoff/picosoc/openlane-signoff/spef/picosoc.min.spef",
-        "dir::../../signoff/picosoc/openlane-signoff/spef/picosoc.nom.spef",
-        "dir::../../signoff/picosoc/openlane-signoff/spef/picosoc.max.spef",
+        "dir::../../spef/multicorner/picosoc.min.spef",
+        "dir::../../spef/multicorner/picosoc.nom.spef",
+        "dir::../../spef/multicorner/picosoc.max.spef",
         "digital_locked_loop",
         "dir::../../signoff/digital_locked_loop/openlane-signoff/spef/digital_locked_loop.min.spef",
         "dir::../../signoff/digital_locked_loop/openlane-signoff/spef/digital_locked_loop.nom.spef",
         "dir::../../signoff/digital_locked_loop/openlane-signoff/spef/digital_locked_loop.max.spef"
     ],
-
     "BASE_SDC_FILE": "dir::base.sdc",
     "RCX_SDC_FILE": "dir::signoff.sdc",
     "QUIT_ON_SYNTH_CHECKS": 0,
@@ -45,27 +39,26 @@
     "PL_RESIZER_TIMING_OPTIMIZATIONS": 1,
     "GLB_RESIZER_TIMING_OPTIMIZATIONS": 1,
     "GLB_RESIZER_DESIGN_OPTIMIZATIONS": 1,
-    "PL_RESIZER_BUFFER_INPUT_PORTS": 1,
-    "PL_RESIZER_MAX_WIRE_LENGTH": 1000,
-    "CTS_CLK_MAX_WIRE_LENGTH": 1000,
+    "PL_RESIZER_MAX_WIRE_LENGTH": 800,
+    "CTS_CLK_MAX_WIRE_LENGTH": 800,
     "RUN_CTS": 0,
     "FP_PDN_ENABLE_RAILS": 1,
-    "GRT_REPAIR_ANTENNAS": 0,
-    "RUN_HEURISTIC_DIODE_INSERTION": 0,
-    "FP_PDN_VPITCH": 60,
-    "FP_PDN_HPITCH": 60,
-    "FP_PDN_VOFFSET": 5,
-    "FP_PDN_HOFFSET": 5,
+    "GRT_REPAIR_ANTENNAS": 1,
+    "RUN_HEURISTIC_DIODE_INSERTION": 1,
+    "FP_PDN_VPITCH": 40,
+    "FP_PDN_HPITCH": 40,
+    "FP_PDN_VOFFSET": 18.43,
+    "FP_PDN_HOFFSET": 22.83,
     "MAGIC_ZEROIZE_ORIGIN": 0,
     "FP_SIZING": "absolute",
     "RUN_CVC": 0,
     "FP_PDN_CORE_RING": 1,
-    "FP_PDN_CORE_RING_VWIDTH": 10,
-    "FP_PDN_CORE_RING_HWIDTH": 10,
-    "FP_PDN_CORE_RING_VOFFSET": 12.45,
-    "FP_PDN_CORE_RING_HOFFSET": 12.45,
-    "FP_PDN_CORE_RING_VSPACING": 1.6,
-    "FP_PDN_CORE_RING_HSPACING": 1.6,
+    "FP_PDN_CORE_RING_VWIDTH": 20,
+    "FP_PDN_CORE_RING_HWIDTH": 20,
+    "FP_PDN_CORE_RING_VOFFSET": -4,
+    "FP_PDN_CORE_RING_HOFFSET": -4,
+    "FP_PDN_CORE_RING_VSPACING": 2.4,
+    "FP_PDN_CORE_RING_HSPACING": 2.4,
     "FP_PDN_VWIDTH": 6.4,
     "FP_PDN_HWIDTH": 6.4,
     "FP_PDN_HSPACING": 3.2,
@@ -83,9 +76,5 @@
     "FP_PDN_MACRO_HOOKS": "openframe_example vccd1 vssd1 VPWR VGND",
     "FP_PDN_CFG": "dir::pdn_cfg.tcl",
     "FP_DEF_TEMPLATE": "dir::fixed_dont_change/openframe_project_wrapper.def",
-    "RUN_MAGIC_DRC": 0,
-    "RUN_KLAYOUT_XOR": 0,
-    "MAGIC_GENERATE_LEF": 0,
-    "RUN_LVS": 0,
-    "QUIT_ON_HOLD_VIOLATIONS": 0
+    "RUN_MAGIC_DRC": 0
 }
