--- a/signoff/picosoc/runtime.yaml
+++ b/signoff/picosoc/runtime.yaml
@@ -1,133 +1,133 @@
 - status: 0 - openlane design prep
-  runtime_s: 1.93
-  runtime_ts: 0h0m1s933ms
+  runtime_s: 1.99
+  runtime_ts: 0h0m1s991ms
 - status: 1 - synthesis - yosys
-  runtime_s: 49.32
-  runtime_ts: 0h0m49s323ms
+  runtime_s: 43.28
+  runtime_ts: 0h0m43s279ms
 - status: 2 - sta - openroad
-  runtime_s: 1.8
-  runtime_ts: 0h0m1s801ms
+  runtime_s: 3.74
+  runtime_ts: 0h0m3s738ms
 - status: 3 - floorplan initialization - openroad
-  runtime_s: 0.78
-  runtime_ts: 0h0m0s777ms
-- status: 4 - io_place - openlane
   runtime_s: 0.75
-  runtime_ts: 0h0m0s746ms
+  runtime_ts: 0h0m0s752ms
+- status: 4 - io_place - openlane
+  runtime_s: 0.76
+  runtime_ts: 0h0m0s763ms
 - status: 6 - tap/decap insertion - openroad
-  runtime_s: 0.66
-  runtime_ts: 0h0m0s655ms
+  runtime_s: 0.71
+  runtime_ts: 0h0m0s714ms
 - status: 7 - pdn generation - openroad
-  runtime_s: 2.15
-  runtime_ts: 0h0m2s152ms
+  runtime_s: 2.01
+  runtime_ts: 0h0m2s13ms
 - status: 8 - global placement - openroad
-  runtime_s: 37.97
-  runtime_ts: 0h0m37s968ms
+  runtime_s: 45.74
+  runtime_ts: 0h0m45s738ms
 - status: 9 - sta - openroad
-  runtime_s: 3.49
-  runtime_ts: 0h0m3s485ms
+  runtime_s: 5.41
+  runtime_ts: 0h0m5s408ms
 - status: 10 - resizer design optimizations - openroad
-  runtime_s: 10.68
-  runtime_ts: 0h0m10s683ms
+  runtime_s: 12.22
+  runtime_ts: 0h0m12s217ms
 - status: 11 - detailed placement - openroad
-  runtime_s: 1.58
-  runtime_ts: 0h0m1s584ms
+  runtime_s: 1.77
+  runtime_ts: 0h0m1s774ms
 - status: 12 - sta - openroad
-  runtime_s: 3.27
-  runtime_ts: 0h0m3s265ms
+  runtime_s: 4.93
+  runtime_ts: 0h0m4s932ms
 - status: 13 - cts - openroad
-  runtime_s: 29.93
-  runtime_ts: 0h0m29s931ms
+  runtime_s: 31.7
+  runtime_ts: 0h0m31s704ms
 - status: 14 - sta - openroad
-  runtime_s: 6.5
-  runtime_ts: 0h0m6s498ms
+  runtime_s: 7.34
+  runtime_ts: 0h0m7s339ms
 - status: 15 - resizer timing optimizations - openroad
-  runtime_s: 125.33
-  runtime_ts: 0h2m5s328ms
+  runtime_s: 320.82
+  runtime_ts: 0h5m20s821ms
 - status: 16 - resizer design optimizations - openroad
-  runtime_s: 24.04
-  runtime_ts: 0h0m24s42ms
+  runtime_s: 33.15
+  runtime_ts: 0h0m33s152ms
 - status: 17 - sta - openroad
-  runtime_s: 6.94
-  runtime_ts: 0h0m6s939ms
+  runtime_s: 9.58
+  runtime_ts: 0h0m9s580ms
 - status: 18 - resizer timing optimizations - openroad
-  runtime_s: 53.32
-  runtime_ts: 0h0m53s317ms
+  runtime_s: 142.78
+  runtime_ts: 0h2m22s776ms
 - status: 19 - sta - openroad
-  runtime_s: 7.01
-  runtime_ts: 0h0m7s12ms
+  runtime_s: 8.57
+  runtime_ts: 0h0m8s566ms
 - status: 21 - detailed placement - openroad
-  runtime_s: 2.52
-  runtime_ts: 0h0m2s515ms
+  runtime_s: 2.89
+  runtime_ts: 0h0m2s890ms
 - status: 21 - heuristic diode insertion - openlane
-  runtime_s: 2.58
-  runtime_ts: 0h0m2s576ms
+  runtime_s: 2.95
+  runtime_ts: 0h0m2s947ms
 - status: 23 - write verilog - openroad
-  runtime_s: 1.36
-  runtime_ts: 0h0m1s363ms
+  runtime_s: 1.61
+  runtime_ts: 0h0m1s611ms
 - status: 24 - sta - openroad
-  runtime_s: 5.36
-  runtime_ts: 0h0m5s357ms
+  runtime_s: 7.53
+  runtime_ts: 0h0m7s528ms
 - status: 24 - global routing - openroad
-  runtime_s: 5.36
-  runtime_ts: 0h0m5s357ms
+  runtime_s: 7.53
+  runtime_ts: 0h0m7s528ms
 - status: 25 - fill insertion - openroad
-  runtime_s: 4.78
-  runtime_ts: 0h0m4s780ms
+  runtime_s: 5.34
+  runtime_ts: 0h0m5s341ms
 - status: 26 - detailed_routing - openroad
-  runtime_s: 1042.75
-  runtime_ts: 0h17m22s748ms
+  runtime_s: 1295.79
+  runtime_ts: 0h21m35s788ms
 - status: 27 - wire lengths - openlane
-  runtime_s: 2.84
-  runtime_ts: 0h0m2s838ms
+  runtime_s: 3.06
+  runtime_ts: 0h0m3s61ms
 - status: 28 - parasitics extraction - openroad
-  runtime_s: 14.2
-  runtime_ts: 0h0m14s204ms
+  runtime_s: 14.29
+  runtime_ts: 0h0m14s291ms
 - status: 29 - sta - openroad
-  runtime_s: 42.51
-  runtime_ts: 0h0m42s505ms
+  runtime_s: 46.51
+  runtime_ts: 0h0m46s505ms
 - status: 30 - parasitics extraction - openroad
-  runtime_s: 12.88
-  runtime_ts: 0h0m12s882ms
+  runtime_s: 14.45
+  runtime_ts: 0h0m14s451ms
 - status: 31 - sta - openroad
-  runtime_s: 46.75
-  runtime_ts: 0h0m46s747ms
+  runtime_s: 54.61
+  runtime_ts: 0h0m54s612ms
 - status: 32 - parasitics extraction - openroad
-  runtime_s: 13.21
-  runtime_ts: 0h0m13s207ms
+  runtime_s: 15.76
+  runtime_ts: 0h0m15s756ms
 - status: 33 - sta - openroad
-  runtime_s: 42.09
-  runtime_ts: 0h0m42s94ms
+  runtime_s: 52.74
+  runtime_ts: 0h0m52s737ms
 - status: 34 - sta - openroad
-  runtime_s: 12.99
-  runtime_ts: 0h0m12s993ms
-- status: 35 - gdsii - magic
-  runtime_s: 247.39
-  runtime_ts: 0h4m7s391ms
-- status: 36 - gdsii - klayout
-  runtime_s: 6.5
-  runtime_ts: 0h0m6s496ms
-- status: 37 - xor - klayout
-  runtime_s: 218.16
-  runtime_ts: 0h3m38s159ms
-- status: 38 - spice extraction - magic
-  runtime_s: 161.34
-  runtime_ts: 0h2m41s337ms
-- status: 40 - write verilog - openroad
-  runtime_s: 8.23
-  runtime_ts: 0h0m8s228ms
-- status: 40 - write powered verilog - openlane
-  runtime_s: 8.29
-  runtime_ts: 0h0m8s294ms
-- status: 41 - lvs - netgen
-  runtime_s: 30.18
-  runtime_ts: 0h0m30s175ms
-- status: 42 - antenna check - openroad
-  runtime_s: 8.09
-  runtime_ts: 0h0m8s86ms
+  runtime_s: 15.31
+  runtime_ts: 0h0m15s307ms
+- status: 35 - antenna check - openroad
+  runtime_s: 9.13
+  runtime_ts: 0h0m9s131ms
+- status: 36 - gdsii - magic
+  runtime_s: 127.59
+  runtime_ts: 0h2m7s588ms
+- status: 36 - lef - magic
+  runtime_s: 69.93
+  runtime_ts: 0h1m9s933ms
+- status: 37 - spice extraction - magic
+  runtime_s: 164.08
+  runtime_ts: 0h2m44s80ms
+- status: 39 - write verilog - openroad
+  runtime_s: 6.25
+  runtime_ts: 0h0m6s245ms
+- status: 39 - write powered verilog - openlane
+  runtime_s: 6.31
+  runtime_ts: 0h0m6s307ms
+- status: 40 - lvs - netgen
+  runtime_s: 37.72
+  runtime_ts: 0h0m37s722ms
+- status: 41 - drc - magic
+  runtime_s: 947.52
+  runtime_ts: 0h15m47s523ms
 ---
 - status: routed
-  runtime_s: 1570.0
-  runtime_ts: 0h26m10s0ms
+  runtime_s: 2150.0
+  runtime_ts: 0h35m50s0ms
 - status: flow completed
-  runtime_s: 2444.0
-  runtime_ts: 0h40m44s0ms
+  runtime_s: 3735.0
+  runtime_ts: 1h2m15s0ms
