--- a/signoff/openframe_project_wrapper/runtime.yaml
+++ b/signoff/openframe_project_wrapper/runtime.yaml
@@ -1,106 +1,124 @@
 - status: 0 - openlane design prep
-  runtime_s: 1.98
-  runtime_ts: 0h0m1s980ms
+  runtime_s: 2.22
+  runtime_ts: 0h0m2s216ms
 - status: 1 - synthesis - yosys
-  runtime_s: 29.54
-  runtime_ts: 0h0m29s539ms
+  runtime_s: 30.91
+  runtime_ts: 0h0m30s905ms
 - status: 2 - sta - openroad
-  runtime_s: 14.96
-  runtime_ts: 0h0m14s961ms
+  runtime_s: 17.62
+  runtime_ts: 0h0m17s620ms
 - status: 3 - floorplan initialization - openroad
-  runtime_s: 0.44
-  runtime_ts: 0h0m0s437ms
+  runtime_s: 0.46
+  runtime_ts: 0h0m0s456ms
 - status: 4 - ioplace - openroad
-  runtime_s: 0.38
-  runtime_ts: 0h0m0s380ms
+  runtime_s: 0.37
+  runtime_ts: 0h0m0s373ms
 - status: 6 - tap/decap insertion - openroad
-  runtime_s: 1.11
-  runtime_ts: 0h0m1s110ms
+  runtime_s: 0.99
+  runtime_ts: 0h0m0s990ms
 - status: 7 - pdn generation - openroad
-  runtime_s: 4.57
-  runtime_ts: 0h0m4s569ms
+  runtime_s: 5.38
+  runtime_ts: 0h0m5s376ms
 - status: 8 - global placement - openroad
-  runtime_s: 4.83
-  runtime_ts: 0h0m4s825ms
+  runtime_s: 4.37
+  runtime_ts: 0h0m4s373ms
 - status: 9 - sta - openroad
-  runtime_s: 1.47
-  runtime_ts: 0h0m1s465ms
+  runtime_s: 1.36
+  runtime_ts: 0h0m1s359ms
 - status: 10 - resizer design optimizations - openroad
-  runtime_s: 5.31
-  runtime_ts: 0h0m5s312ms
+  runtime_s: 4.87
+  runtime_ts: 0h0m4s871ms
 - status: 11 - detailed placement - openroad
-  runtime_s: 2.87
-  runtime_ts: 0h0m2s871ms
+  runtime_s: 2.82
+  runtime_ts: 0h0m2s817ms
 - status: 12 - sta - openroad
-  runtime_s: 1.6
-  runtime_ts: 0h0m1s597ms
-- status: 13 - resizer timing optimizations - openroad
-  runtime_s: 5.48
-  runtime_ts: 0h0m5s484ms
-- status: 14 - resizer design optimizations - openroad
-  runtime_s: 6.32
-  runtime_ts: 0h0m6s315ms
-- status: 15 - sta - openroad
-  runtime_s: 2.34
-  runtime_ts: 0h0m2s341ms
-- status: 16 - resizer timing optimizations - openroad
-  runtime_s: 6.98
-  runtime_ts: 0h0m6s982ms
+  runtime_s: 1.41
+  runtime_ts: 0h0m1s407ms
+- status: 13 - cts - openroad
+  runtime_s: 24.81
+  runtime_ts: 0h0m24s806ms
+- status: 14 - sta - openroad
+  runtime_s: 1.55
+  runtime_ts: 0h0m1s547ms
+- status: 15 - resizer timing optimizations - openroad
+  runtime_s: 4.6
+  runtime_ts: 0h0m4s604ms
+- status: 16 - resizer design optimizations - openroad
+  runtime_s: 8.43
+  runtime_ts: 0h0m8s432ms
 - status: 17 - sta - openroad
-  runtime_s: 2.59
-  runtime_ts: 0h0m2s589ms
-- status: 19 - write verilog - openroad
-  runtime_s: 1.35
-  runtime_ts: 0h0m1s355ms
-- status: 20 - sta - openroad
-  runtime_s: 1.49
-  runtime_ts: 0h0m1s487ms
-- status: 20 - global routing - openroad
-  runtime_s: 1.49
-  runtime_ts: 0h0m1s487ms
-- status: 21 - fill insertion - openroad
-  runtime_s: 15.31
-  runtime_ts: 0h0m15s314ms
-- status: 22 - detailed_routing - openroad
-  runtime_s: 260.98
-  runtime_ts: 0h4m20s978ms
-- status: 23 - wire lengths - openlane
-  runtime_s: 7.47
-  runtime_ts: 0h0m7s468ms
-- status: 24 - parasitics extraction - openroad
-  runtime_s: 8.86
-  runtime_ts: 0h0m8s859ms
-- status: 25 - sta - openroad
-  runtime_s: 68.55
-  runtime_ts: 0h1m8s551ms
-- status: 26 - parasitics extraction - openroad
-  runtime_s: 8.33
-  runtime_ts: 0h0m8s332ms
-- status: 27 - sta - openroad
-  runtime_s: 70.47
-  runtime_ts: 0h1m10s466ms
+  runtime_s: 2.14
+  runtime_ts: 0h0m2s141ms
+- status: 18 - resizer timing optimizations - openroad
+  runtime_s: 5.76
+  runtime_ts: 0h0m5s756ms
+- status: 19 - sta - openroad
+  runtime_s: 2.12
+  runtime_ts: 0h0m2s121ms
+- status: 21 - detailed placement - openroad
+  runtime_s: 2.89
+  runtime_ts: 0h0m2s887ms
+- status: 21 - heuristic diode insertion - openlane
+  runtime_s: 2.95
+  runtime_ts: 0h0m2s950ms
+- status: 23 - write verilog - openroad
+  runtime_s: 1.32
+  runtime_ts: 0h0m1s316ms
+- status: 24 - sta - openroad
+  runtime_s: 1.4
+  runtime_ts: 0h0m1s398ms
+- status: 24 - global routing - openroad
+  runtime_s: 1.4
+  runtime_ts: 0h0m1s398ms
+- status: 25 - fill insertion - openroad
+  runtime_s: 13.89
+  runtime_ts: 0h0m13s888ms
+- status: 26 - detailed_routing - openroad
+  runtime_s: 230.26
+  runtime_ts: 0h3m50s263ms
+- status: 27 - wire lengths - openlane
+  runtime_s: 7.13
+  runtime_ts: 0h0m7s131ms
 - status: 28 - parasitics extraction - openroad
-  runtime_s: 8.66
-  runtime_ts: 0h0m8s663ms
+  runtime_s: 9.65
+  runtime_ts: 0h0m9s649ms
 - status: 29 - sta - openroad
-  runtime_s: 68.46
-  runtime_ts: 0h1m8s460ms
-- status: 30 - sta - openroad
-  runtime_s: 28.46
-  runtime_ts: 0h0m28s463ms
-- status: 31 - gdsii - magic
-  runtime_s: 281.02
-  runtime_ts: 0h4m41s21ms
-- status: 32 - gdsii - klayout
-  runtime_s: 18.4
-  runtime_ts: 0h0m18s400ms
-- status: 33 - antenna check - openroad
-  runtime_s: 11.74
-  runtime_ts: 0h0m11s740ms
+  runtime_s: 68.15
+  runtime_ts: 0h1m8s146ms
+- status: 30 - parasitics extraction - openroad
+  runtime_s: 9.79
+  runtime_ts: 0h0m9s787ms
+- status: 31 - sta - openroad
+  runtime_s: 72.03
+  runtime_ts: 0h1m12s30ms
+- status: 32 - parasitics extraction - openroad
+  runtime_s: 9.62
+  runtime_ts: 0h0m9s619ms
+- status: 33 - sta - openroad
+  runtime_s: 69.12
+  runtime_ts: 0h1m9s117ms
+- status: 34 - sta - openroad
+  runtime_s: 29.57
+  runtime_ts: 0h0m29s568ms
+- status: 35 - gdsii - magic
+  runtime_s: 505.52
+  runtime_ts: 0h8m25s516ms
+- status: 35 - lef - magic
+  runtime_s: 394.04
+  runtime_ts: 0h6m34s36ms
+- status: 36 - gdsii - klayout
+  runtime_s: 19.52
+  runtime_ts: 0h0m19s524ms
+- status: 37 - xor - klayout
+  runtime_s: 593.49
+  runtime_ts: 0h9m53s486ms
+- status: 38 - antenna check - openroad
+  runtime_s: 10.73
+  runtime_ts: 0h0m10s733ms
 ---
 - status: routed
-  runtime_s: 414.0
-  runtime_ts: 0h6m54s0ms
+  runtime_s: 418.0
+  runtime_ts: 0h6m58s0ms
 - status: flow completed
-  runtime_s: 990.0
-  runtime_ts: 0h16m30s0ms
+  runtime_s: 2214.0
+  runtime_ts: 0h36m54s0ms
