Added corrections to verilog source and configurations for the openlane macro hardening and top level synthesis.  Removed old files that corresponded to the caravan design and not to the openframe design.

--- a/openlane/openframe_project_wrapper/macro.cfg
+++ b/openlane/openframe_project_wrapper/macro.cfg
@@ -1,2 +1,3 @@
-openframe_example.soc_mem.mem.SRAM_0 100 15 N
-openframe_example.soc_mem.mem.SRAM_1 1100 15 N
+openframe_example 550 1990 N
+vccd1_connection 3122.515 4327.515 N
+vssd1_connection 3122.515 2088.515 N
