--- a/openlane/openframe_project_wrapper/config.json
+++ b/openlane/openframe_project_wrapper/config.json
@@ -1,91 +1,93 @@
 {
     "DESIGN_NAME": "openframe_project_wrapper",
     "VERILOG_FILES": [
-        "dir::../../verilog/rtl/openframe_project_netlists.v"
+        "dir::../../verilog/rtl/openframe_project_netlists.v",
+        "dir::../../verilog/rtl/openframe_project_wrapper.v"
     ],
-    "RUN_VERILATOR": 0,
+    "SYNTH_DEFINES": "PnR",
+    "RUN_LINTER": 0,
     "SYNTH_READ_BLACKBOX_LIB": 1,
-    "ROUTING_CORES": 1,
+    "ROUTING_CORES": 10,
     "CLOCK_PERIOD": 25,
     "CLOCK_PORT": "gpio_in[38]",
-    "CLOCK_NET": "openframe_example.gpio_in[38]",
-    "FP_PDN_MACRO_HOOKS": "openframe_example vccd1 vssd1 vccd1 vssd1",
     "MACRO_PLACEMENT_CFG": "dir::macro.cfg",
     "MAGIC_DEF_LABELS": 0,
     "VERILOG_FILES_BLACKBOX": [
-	"/usr/share/pdk/sky130A/libs.ref/sky130_sram_macros/verilog/sky130_sram_2kbyte_1rw1r_32x512_8.v"
+        "dir::../picosoc/sky130_sram_2kbyte_1rw1r_32x512_8.v",
+        "dir::../../verilog/gl/picosoc.v",
+        "dir::../../verilog/gl/vccd1_connection.v",
+        "dir::../../verilog/gl/vssd1_connection.v",
+        "dir::../../verilog/gl/digital_locked_loop.v"
     ],
-    "EXTRA_LEFS": "/usr/share/pdk/sky130A/libs.ref/sky130_sram_macros/lef/sky130_sram_2kbyte_1rw1r_32x512_8.lef",
-    "EXTRA_GDS_FILES": "/usr/share/pdk/sky130A/libs.ref/sky130_sram_macros/gds/sky130_sram_2kbyte_1rw1r_32x512_8.gds",
-    "BASE_SDC_FILE": "dir::base_openframe_project_wrapper.sdc",
-    "IO_SYNC": 0,
+    "EXTRA_LEFS": [
+        "dir::../../lef/picosoc.lef",
+        "dir::../../lef/vccd1_connection.lef",
+        "dir::../../lef/vssd1_connection.lef"
+    ],
+    "EXTRA_GDS_FILES": [
+        "dir::../../gds/picosoc.gds",
+        "dir::../../gds/vccd1_connection.gds",
+        "dir::../../gds/vssd1_connection.gds"
+    ],
+    "EXTRA_LIBS": ["dir::../../lib/picosoc.lib"],
+    "EXTRA_SPEFS": [
+        "picosoc",
+        "dir::../../signoff/picosoc/openlane-signoff/spef/picosoc.min.spef",
+        "dir::../../signoff/picosoc/openlane-signoff/spef/picosoc.nom.spef",
+        "dir::../../signoff/picosoc/openlane-signoff/spef/picosoc.max.spef",
+        "digital_locked_loop",
+        "dir::../../signoff/digital_locked_loop/openlane-signoff/spef/digital_locked_loop.min.spef",
+        "dir::../../signoff/digital_locked_loop/openlane-signoff/spef/digital_locked_loop.nom.spef",
+        "dir::../../signoff/digital_locked_loop/openlane-signoff/spef/digital_locked_loop.max.spef"
+    ],
+    "BASE_SDC_FILE": "dir::base.sdc",
+    "RCX_SDC_FILE": "dir::signoff.sdc",
+    "MAX_TRANSITION_CONSTRAINT": 0.5,
+    "QUIT_ON_SYNTH_CHECKS": 0,
     "FP_PDN_CHECK_NODES": 0,
-    "SYNTH_ELABORATE_ONLY": 0,
     "SYNTH_USE_PG_PINS_DEFINES": "USE_POWER_PINS",
-    "PL_RANDOM_GLB_PLACEMENT": 1,
-    "PL_RESIZER_DESIGN_OPTIMIZATIONS": 0,
-    "PL_RESIZER_TIMING_OPTIMIZATIONS": 0,
-    "PL_RESIZER_BUFFER_INPUT_PORTS": 0,
-    "FP_PDN_ENABLE_RAILS": 0,
-    "DIODE_INSERTION_STRATEGY": 0,
-    "RUN_FILL_INSERTION": 0,
-    "RUN_TAP_DECAP_INSERTION": 0,
-    "FP_PDN_VPITCH": 180,
-    "FP_PDN_HPITCH": 180,
-    "FP_PDN_VOFFSET": 5,
-    "FP_PDN_HOFFSET": 5,
+    "PL_RESIZER_DESIGN_OPTIMIZATIONS": 1,
+    "PL_RESIZER_TIMING_OPTIMIZATIONS": 1,
+    "GLB_RESIZER_TIMING_OPTIMIZATIONS": 1,
+    "GLB_RESIZER_DESIGN_OPTIMIZATIONS": 1,
+    "PL_RESIZER_MAX_WIRE_LENGTH": 500,
+    "GLB_RESIZER_MAX_WIRE_LENGTH": 500,
+    "CTS_CLK_MAX_WIRE_LENGTH": 500,
+    "RUN_CTS": 1,
+    "FP_PDN_ENABLE_RAILS": 1,
+    "GRT_REPAIR_ANTENNAS": 1,
+    "RUN_HEURISTIC_DIODE_INSERTION": 1,
+    "FP_PDN_VPITCH": 40,
+    "FP_PDN_HPITCH": 40,
+    "FP_PDN_VOFFSET": 18.43,
+    "FP_PDN_HOFFSET": 22.83,
     "MAGIC_ZEROIZE_ORIGIN": 0,
     "FP_SIZING": "absolute",
     "RUN_CVC": 0,
-    "UNIT": 2.4,
-    "FP_IO_VEXTEND": "expr::2 * $UNIT",
-    "FP_IO_HEXTEND": "expr::2 * $UNIT",
-    "FP_IO_VLENGTH": "expr::$UNIT",
-    "FP_IO_HLENGTH": "expr::$UNIT",
-    "FP_IO_VTHICKNESS_MULT": 4,
-    "FP_IO_HTHICKNESS_MULT": 4,
     "FP_PDN_CORE_RING": 1,
-    "FP_PDN_CORE_RING_VWIDTH": 3.1,
-    "FP_PDN_CORE_RING_HWIDTH": 3.1,
-    "FP_PDN_CORE_RING_VOFFSET": 12.45,
-    "FP_PDN_CORE_RING_HOFFSET": 12.45,
-    "FP_PDN_CORE_RING_VSPACING": 1.7,
-    "FP_PDN_CORE_RING_HSPACING": 1.7,
-    "FP_PDN_VWIDTH": 3.1,
-    "FP_PDN_HWIDTH": 3.1,
-    "FP_PDN_VSPACING": "expr::(5 * $FP_PDN_CORE_RING_VWIDTH)",
-    "FP_PDN_HSPACING": "expr::(5 * $FP_PDN_CORE_RING_HWIDTH)",
+    "FP_PDN_CORE_RING_VWIDTH": 20,
+    "FP_PDN_CORE_RING_HWIDTH": 20,
+    "FP_PDN_CORE_RING_VOFFSET": -4,
+    "FP_PDN_CORE_RING_HOFFSET": -4,
+    "FP_PDN_CORE_RING_VSPACING": 2.4,
+    "FP_PDN_CORE_RING_HSPACING": 2.4,
+    "FP_PDN_VWIDTH": 6.4,
+    "FP_PDN_HWIDTH": 6.4,
+    "FP_PDN_HSPACING": 3.2,
+    "FP_PDN_VSPACING": 3.2,
     "VDD_NETS": [
-        "vccd1",
-        "vccd2",
-        "vdda1",
-        "vdda2"
+        "vccd1"
     ],
     "GND_NETS": [
-        "vssd1",
-        "vssd2",
-        "vssa1",
-        "vssa2"
+        "vssd1"
     ],
-    "pdk::sky130*": {
-        "RT_MAX_LAYER": "met4",
-        "DIE_AREA": "0 0 3168.82 4768.82",
-        "FP_DEF_TEMPLATE": "dir::fixed_dont_change/openframe_project_wrapper.def",
-        "scl::sky130_fd_sc_hd": {
-            "CLOCK_PERIOD": 25
-        },
-        "scl::sky130_fd_sc_hdll": {
-            "CLOCK_PERIOD": 10
-        },
-        "scl::sky130_fd_sc_hs": {
-            "CLOCK_PERIOD": 8
-        },
-        "scl::sky130_fd_sc_ls": {
-            "CLOCK_PERIOD": 10,
-            "SYNTH_MAX_FANOUT": 5
-        },
-        "scl::sky130_fd_sc_ms": {
-            "CLOCK_PERIOD": 10
-        }
-    }
+    "PL_TARGET_DENSITY": 0.1,
+    "DIE_AREA": "0 0 3166.63 4766.630",
+    "CORE_AREA": "40 40 3126.63 4726.630",
+    "RUN_IRDROP_REPORT": 0,
+    "FP_PDN_MACRO_HOOKS": "openframe_example vccd1 vssd1 VPWR VGND",
+    "FP_PDN_CFG": "dir::pdn_cfg.tcl",
+    "FP_DEF_TEMPLATE": "dir::fixed_dont_change/openframe_project_wrapper.def",
+    "RUN_MAGIC_DRC": 0,
+    "RUN_LVS": 0
 }
