Added files that were needed to complete the synthesis, place, and route, and some modified files.

--- a/openlane/picosoc/config.json
+++ b/openlane/picosoc/config.json
@@ -22,6 +22,7 @@
     "QUIT_ON_SYNTH_CHECKS": false,
     "SYNTH_READ_BLACKBOX_LIB": 1,
     "SYNTH_STRATEGY": "DELAY 0",
+    "OUTPUT_CAP_LOAD": 52,
     "MAX_TRANSITION_CONSTRAINT": 0.8,
     "MAX_FANOUT_CONSTRAINT": 16,
     "ROUTING_CORES": 16,
@@ -79,6 +80,7 @@
     "FP_PDN_CFG": "dir::pdn_cfg.tcl",
     "FP_PDN_MACRO_HOOKS": "soc_mem\\.mem\\.SRAM_0 VPWR VGND vccd1 vssd1, soc_mem\\.mem\\.SRAM_1 VPWR VGND vccd1 vssd1, dll VPWR VGND vccd1 vssd1",
     "RUN_CTS": 1,
+    "RUN_LINTER": 0,
     "CTS_CLK_MAX_WIRE_LENGTH": 500,
     "CLOCK_PORT": "gpio_in[38]",
     "PL_TARGET_DENSITY": 0.28,
