--- a/openlane/picosoc/config.json
+++ b/openlane/picosoc/config.json
@@ -95,5 +95,6 @@
     "FP_PIN_ORDER_CFG": "dir::pin_order.cfg",
     "SYNTH_DEFINES": "PnR",
     "QUIT_ON_HOLD_VIOLATIONS": 0,
-    "GRT_ADJUSTMENT": 0.18
+    "GRT_ADJUSTMENT": 0.18,
+    "RUN_KLAYOUT_XOR"" 0
 }
