Fixed a typo in the picsoc config.json file.

--- a/openlane/picosoc/config.json
+++ b/openlane/picosoc/config.json
@@ -96,5 +96,5 @@
     "SYNTH_DEFINES": "PnR",
     "QUIT_ON_HOLD_VIOLATIONS": 0,
     "GRT_ADJUSTMENT": 0.18,
-    "RUN_KLAYOUT_XOR"" 0
+    "RUN_KLAYOUT_XOR": 0
 }
